# SimuWork-Automate-WFH-

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: evasion_engine.rs  input_simulator.rs  main.rs  os_integration.rs
